[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyinkui"
version = "0.1.0"
description = "Python translation of @inkjs/ui built on top of pyinkcli"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Quantmew Contributors" }
]
keywords = ["ink", "cli", "terminal", "ui", "python", "react"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    "pyinkcli @ git+https://github.com/quantmew/pyinkcli.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/quantmew/pyinkui"
Repository = "https://github.com/quantmew/pyinkui"
Issues = "https://github.com/quantmew/pyinkui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyinkui"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/pyinkui",
    "/README.md",
    "/LICENSE",
    "/docs",
    "/examples",
    "/media",
    "/test",
    "/tests",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
